Make load static and remove deprecated call to newInstance